OCI/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: giropops-senhas
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
spec: {}
status: {}
---
