OCI/manifests/deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: giropops-senhas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: cgr.dev/chainguard/redis:latest@sha256:5e036c79c5c64508501a43a9f0915d0dacb4b7018655f89359e3d426bcf64613
          name: redis
          ports:
            - containerPort: 6379
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.5"
              memory: 512Mi
            requests:
              cpu: "0.1"
              memory: 256Mi
          # securityContext:
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          #   runAsUser: 1000
