OCI/manifests/service-grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 10.2.3
  name: grafana-svc
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31603
      name: tcp-app
  type: NodePort
