OCI/manifests/service-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    prometheus: k8s
  name: prometheus-svc
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    operator.prometheus.io/name: k8s
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 31602
      name: tcp-app
  type: NodePort
