OCI/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: giropops-senhas
  name: giropops-svc
  namespace: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: tcp-app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: giropops-senhas
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: locust-giropops
  name: locust-svc
  namespace: giropops-senhas
spec:
  selector:
    app: locust-giropops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
      name: tcp-locust
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis-service
  namespace: giropops-senhas
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: tcp-redis
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.26.0
  name: alertmanager-svc
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: kube-prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9093
      name: tcp-app
  sessionAffinity: ClientIP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 10.2.3
  name: grafana-svc
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: tcp-app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    prometheus: k8s
  name: prometheus-svc
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    operator.prometheus.io/name: k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
      name: tcp-app
  type: NodePort
